Update branding and homepage for SolarPack
Rebranded the site from 'Solar Car Club' to 'SolarPack' and updated the homepage with new logos, team description, and visual elements. Added new images, enhanced the hero and about sections, and moved README.md to docs/README.md.

--- a/index.html
+++ b/index.html
@@ -116,7 +116,9 @@
 </head>
 <body>
 	<header class="header">
-		<div class="logo">SC</div>
+<div class="logo" style="padding:0;background:#222;overflow:hidden;">
+  <img src="assets/images/solarpack_logo.png" alt="SolarPack Logo" style="height:44px;width:44px;object-fit:contain;border-radius:50%;background:#222;display:block;" />
+</div>
 		<nav class="nav">
 			<a href="index.html" class="active">Home</a>
 			<a href="team.html">Team</a>
@@ -129,27 +131,60 @@
 	</header>
 	<main>
 		<section class="hero">
-			<h1>Solar Car Club</h1>
-			<div class="subtitle">Building the future of electric vehicles, one sunbeam at a time.</div>
-			<img src="logo-placeholder.png" alt="Club Logo" class="img-hero" />
-		</section>
-		<section class="section">
-			<h2>About Us</h2>
-			<p>
-				We are a passionate team of students and engineers dedicated to designing, building, and racing solar-powered electric vehicles. Our mission is to innovate, inspire, and drive the future of sustainable transportation.
+<img src="assets/images/solarpack_logo.gif" alt="SolarPack Logo" class="img-hero" style="max-width:320px;" />
+			<h1 style="margin-top:1.2rem;">SolarPack</h1>
+			<div class="subtitle" style="font-size:1.25rem;">Solar Vehicle Team at NC State</div>
+			<p style="color:var(--subtxt);max-width:600px;margin:1.2rem auto 0;">
+				Striving to break barriers in the sustainable vehicle industry with a hardworking group of over 40 passionate students. Join us in our journey to a more sustainable future for transportation.
 			</p>
 		</section>
+
+		<section class="section" style="margin-top:2.5rem;">
+			<img src="DSC_0248.JPG" alt="Solar Car Team" style="width:100%;max-width:520px;display:block;margin:0 auto 1.5rem;border-radius:var(--radius);box-shadow:0 2px 16px #0005;background:#222;" />
+			<h2 style="text-align:center;margin-bottom:0.7rem;">Sustainable, Efficient, and Powerful.</h2>
+			<p style="color:var(--subtxt);text-align:center;max-width:600px;margin:0 auto 1.2rem;">
+				As NC State's first solar vehicle team, we are aiming to show the world that solar energy can be used to power a car. Along the way, we are making a solar vehicle no other team has done before.
+			</p>
+		</section>
+
+		<section class="section" style="display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:2.2rem 1.5rem;max-width:900px;">
+			<div style="text-align:center;">
+				<img src="Globe-White.png" alt="Globe" style="height:54px;margin-bottom:0.7rem;" />
+				<h3 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:1.3rem;margin-bottom:0.3rem;">Global Impact</h3>
+				<p style="color:var(--subtxt);font-size:1.05rem;">We're showing the world that solar energy can power a multi-occupancy car. By building a vehicle no one has seen before, we hope to prove that sustainability and power can go hand in hand.</p>
+			</div>
+			<div style="text-align:center;">
+				<img src="Gears-White.png" alt="Gears" style="height:54px;margin-bottom:0.7rem;" />
+				<h3 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:1.3rem;margin-bottom:0.3rem;">Engineering Excellence</h3>
+				<p style="color:var(--subtxt);font-size:1.05rem;">Our team thrives on creative problem solving. Members develop real-world skills as they tackle unique engineering challenges throughout our build process.</p>
+			</div>
+			<div style="text-align:center;">
+				<img src="Lightbulb-White.png" alt="Lightbulb" style="height:54px;margin-bottom:0.7rem;" />
+				<h3 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:1.3rem;margin-bottom:0.3rem;">Innovation</h3>
+				<p style="color:var(--subtxt);font-size:1.05rem;">Pioneering new solutions, our members are always innovating—using every resource to bring big ideas to life and push the boundaries of solar vehicle technology.</p>
+			</div>
+			<div style="text-align:center;">
+				<img src="Handshake-White.png" alt="Handshake" style="height:54px;margin-bottom:0.7rem;" />
+				<h3 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:1.3rem;margin-bottom:0.3rem;">Collaboration</h3>
+				<p style="color:var(--subtxt);font-size:1.05rem;">We partner with companies and alumni to guide our journey, building strong relationships as we promote the future of energy-efficient vehicles.</p>
+			</div>
+			<div style="text-align:center;">
+				<img src="North-Carolina-White.png" alt="North Carolina" style="height:54px;margin-bottom:0.7rem;" />
+				<h3 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:1.3rem;margin-bottom:0.3rem;">Rooted in the Triangle</h3>
+				<p style="color:var(--subtxt);font-size:1.05rem;">Proudly representing the Research Triangle, we embody the spirit of innovation and excellence that defines our region—driving forward as leaders in sustainable technology.</p>
+			</div>
+		</section>
+
 		<div class="socials">
 			<a href="#" title="Instagram"><i class="fab fa-instagram"></i></a>
 			<a href="#" title="Twitter"><i class="fab fa-x-twitter"></i></a>
 			<a href="#" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
 			<a href="#" title="YouTube"><i class="fab fa-youtube"></i></a>
 			<a href="#" title="Facebook"><i class="fab fa-facebook"></i></a>
-			<!-- Add more socials as needed -->
 		</div>
 	</main>
 	<footer class="footer">
-		&copy; 2025 Solar Car Club. All rights reserved.
+		&copy; 2025 SolarPack · NC State Solar Vehicle Team. All rights reserved.
 	</footer>
 </body>
 </html>
