--- a/index.html
+++ b/index.html
@@ -113,6 +113,9 @@
 	</style>
 	<!-- Font Awesome for icons -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
+  <!-- Ionicons CDN -->
+  <script type="module" src="https://unpkg.com/ionicons@7.2.1/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@7.2.1/dist/ionicons/ionicons.js"></script>
 </head>
 <body>
 	<header class="header">
@@ -148,31 +151,31 @@
 		</section>
 
 		<section class="section" style="display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:2.2rem 1.5rem;max-width:900px;">
-			<div style="text-align:center;">
-				<img src="Globe-White.png" alt="Globe" style="height:54px;margin-bottom:0.7rem;" />
-				<h3 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:1.3rem;margin-bottom:0.3rem;">Global Impact</h3>
-				<p style="color:var(--subtxt);font-size:1.05rem;">We're showing the world that solar energy can power a multi-occupancy car. By building a vehicle no one has seen before, we hope to prove that sustainability and power can go hand in hand.</p>
-			</div>
-			<div style="text-align:center;">
-				<img src="Gears-White.png" alt="Gears" style="height:54px;margin-bottom:0.7rem;" />
-				<h3 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:1.3rem;margin-bottom:0.3rem;">Engineering Excellence</h3>
-				<p style="color:var(--subtxt);font-size:1.05rem;">Our team thrives on creative problem solving. Members develop real-world skills as they tackle unique engineering challenges throughout our build process.</p>
-			</div>
-			<div style="text-align:center;">
-				<img src="Lightbulb-White.png" alt="Lightbulb" style="height:54px;margin-bottom:0.7rem;" />
-				<h3 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:1.3rem;margin-bottom:0.3rem;">Innovation</h3>
-				<p style="color:var(--subtxt);font-size:1.05rem;">Pioneering new solutions, our members are always innovating—using every resource to bring big ideas to life and push the boundaries of solar vehicle technology.</p>
-			</div>
-			<div style="text-align:center;">
-				<img src="Handshake-White.png" alt="Handshake" style="height:54px;margin-bottom:0.7rem;" />
-				<h3 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:1.3rem;margin-bottom:0.3rem;">Collaboration</h3>
-				<p style="color:var(--subtxt);font-size:1.05rem;">We partner with companies and alumni to guide our journey, building strong relationships as we promote the future of energy-efficient vehicles.</p>
-			</div>
-			<div style="text-align:center;">
-				<img src="North-Carolina-White.png" alt="North Carolina" style="height:54px;margin-bottom:0.7rem;" />
-				<h3 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:1.3rem;margin-bottom:0.3rem;">Rooted in the Triangle</h3>
-				<p style="color:var(--subtxt);font-size:1.05rem;">Proudly representing the Research Triangle, we embody the spirit of innovation and excellence that defines our region—driving forward as leaders in sustainable technology.</p>
-			</div>
+<div style="text-align:center;">
+  <ion-icon name="earth-outline" style="font-size:3.2rem;color:var(--accent);margin-bottom:0.5rem;"></ion-icon>
+  <h3 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:1.3rem;margin-bottom:0.3rem;">Global Impact</h3>
+  <p style="color:var(--subtxt);font-size:1.05rem;">We're showing the world that solar energy can power a multi-occupancy car. By building a vehicle no one has seen before, we hope to prove that sustainability and power can go hand in hand.</p>
+</div>
+<div style="text-align:center;">
+  <ion-icon name="cog-outline" style="font-size:3.2rem;color:var(--accent);margin-bottom:0.5rem;"></ion-icon>
+  <h3 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:1.3rem;margin-bottom:0.3rem;">Engineering Excellence</h3>
+  <p style="color:var(--subtxt);font-size:1.05rem;">Our team thrives on creative problem solving. Members develop real-world skills as they tackle unique engineering challenges throughout our build process.</p>
+</div>
+<div style="text-align:center;">
+  <ion-icon name="bulb-outline" style="font-size:3.2rem;color:var(--accent);margin-bottom:0.5rem;"></ion-icon>
+  <h3 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:1.3rem;margin-bottom:0.3rem;">Innovation</h3>
+  <p style="color:var(--subtxt);font-size:1.05rem;">Pioneering new solutions, our members are always innovating—using every resource to bring big ideas to life and push the boundaries of solar vehicle technology.</p>
+</div>
+<div style="text-align:center;">
+  <ion-icon name="hand-left-outline" style="font-size:3.2rem;color:var(--accent);margin-bottom:0.5rem;"></ion-icon>
+  <h3 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:1.3rem;margin-bottom:0.3rem;">Collaboration</h3>
+  <p style="color:var(--subtxt);font-size:1.05rem;">We partner with companies and alumni to guide our journey, building strong relationships as we promote the future of energy-efficient vehicles.</p>
+</div>
+<div style="text-align:center;">
+  <ion-icon name="location-outline" style="font-size:3.2rem;color:var(--accent);margin-bottom:0.5rem;"></ion-icon>
+  <h3 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:1.3rem;margin-bottom:0.3rem;">Rooted in the Triangle</h3>
+  <p style="color:var(--subtxt);font-size:1.05rem;">Proudly representing the Research Triangle, we embody the spirit of innovation and excellence that defines our region—driving forward as leaders in sustainable technology.</p>
+</div>
 		</section>
 
 		<div class="socials">
