--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 		</section>
 
 		<section class="section" style="margin-top:2.5rem;">
-			<img src="DSC_0248.JPG" alt="Solar Car Team" style="width:100%;max-width:520px;display:block;margin:0 auto 1.5rem;border-radius:var(--radius);box-shadow:0 2px 16px #0005;background:#222;" />
+<img src="assets/images/hero_shot.jpg" alt="Solar Car Team" style="width:100%;max-width:520px;display:block;margin:0 auto 1.5rem;border-radius:var(--radius);box-shadow:0 2px 16px #0005;background:#222;" />
 			<h2 style="text-align:center;margin-bottom:0.7rem;">Sustainable, Efficient, and Powerful.</h2>
 			<p style="color:var(--subtxt);text-align:center;max-width:600px;margin:0 auto 1.2rem;">
 				As NC State's first solar vehicle team, we are aiming to show the world that solar energy can be used to power a car. Along the way, we are making a solar vehicle no other team has done before.
