--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
 			background: var(--accent);
 			color: #fff;
 		}
-		.hero {
-			text-align: center;
-			margin: 3.5rem 0 2.5rem;
-		}
+  .hero {
+	text-align: center;
+	margin: 1.5rem 0 2.5rem;
+  }
 		h1 {
 			font-family: "Bebas Neue", sans-serif;
 			font-size: clamp(2.5rem, 7vw, 4.5rem);
@@ -133,22 +133,24 @@
 		</nav>
 	</header>
 	<main>
-		<section class="hero">
-<img src="assets/images/solarpack_logo.gif" alt="SolarPack Logo" class="img-hero" style="max-width:320px;background:transparent;box-shadow:none;" />
-			<h1 style="margin-top:1.2rem;">SolarPack</h1>
-			<div class="subtitle" style="font-size:1.25rem;">Solar Vehicle Team at NC State</div>
-			<p style="color:var(--subtxt);max-width:600px;margin:1.2rem auto 0;">
-				Striving to break barriers in the sustainable vehicle industry with a hardworking group of over 40 passionate students. Join us in our journey to a more sustainable future for transportation.
-			</p>
-		</section>
+<section class="hero" style="display:flex;align-items:center;justify-content:center;gap:2.5rem;flex-wrap:wrap;">
+  <img src="assets/images/solarpack_logo.gif" alt="SolarPack Logo" style="max-width:320px;width:38vw;min-width:160px;background:transparent;box-shadow:none;display:block;" />
+  <div style="text-align:left;min-width:220px;max-width:480px;">
+	<h1 style="margin:0 0 0.5rem 0;font-size:clamp(3.5rem,8vw,6.5rem);line-height:1.05;">SolarPack</h1>
+	<div class="subtitle" style="font-size:1.25rem;margin-bottom:1.2rem;">Solar Vehicle Team at NC State</div>
+	<p style="color:var(--subtxt);max-width:600px;margin:0;">
+	  Striving to break barriers in the sustainable vehicle industry with a hardworking group of over 40 passionate students. Join us in our journey to a more sustainable future for transportation.
+	</p>
+  </div>
+</section>
 
-		<section class="section" style="margin-top:2.5rem;">
-<img src="assets/images/hero_shot.jpg" alt="Solar Car Team" style="width:100%;display:block;margin:0 auto 1.5rem;border-radius:var(--radius);box-shadow:0 2px 16px #0005;background:#222;" />
-			<h2 style="text-align:center;margin-bottom:0.7rem;">Sustainable, Efficient, and Powerful.</h2>
-			<p style="color:var(--subtxt);text-align:center;max-width:600px;margin:0 auto 1.2rem;">
-				As NC State's first solar vehicle team, we are aiming to show the world that solar energy can be used to power a car. Along the way, we are making a solar vehicle no other team has done before.
-			</p>
-		</section>
+<section class="section" style="margin-top:2.5rem;max-width:900px;">
+  <img src="assets/images/hero_shot.jpg" alt="Solar Car Team" style="width:100%;max-width:100%;display:block;margin:0 auto 1.5rem;border-radius:var(--radius);box-shadow:0 2px 16px #0005;background:#222;" />
+  <h2 style="text-align:center;margin-bottom:0.7rem;">Sustainable, Efficient, and Powerful.</h2>
+  <p style="color:var(--subtxt);text-align:center;max-width:600px;margin:0 auto 1.2rem;">
+	As NC State's first solar vehicle team, we are aiming to show the world that solar energy can be used to power a car. Along the way, we are making a solar vehicle no other team has done before.
+  </p>
+</section>
 
 <section class="section" style="max-width:900px;padding-bottom:2.5rem;">
   <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:2.2rem 1.5rem;justify-items:center;">
