--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@
 	</header>
 	<main>
 <section class="hero" style="display:flex;align-items:center;justify-content:center;gap:2.5rem;flex-wrap:wrap;">
-  <img src="assets/images/solarpack_logo.gif" alt="SolarPack Logo" style="max-width:640px;width:76vw;min-width:320px;background:transparent;box-shadow:none;display:block;" />
+  <img src="assets/images/solarpack_logo.gif" alt="SolarPack Logo" style="max-width:480px;width:57vw;min-width:240px;background:transparent;box-shadow:none;display:block;" />
   <div style="text-align:left;min-width:220px;max-width:480px;">
-	<h1 style="margin:0 0 0.5rem 0;font-size:clamp(3.5rem,8vw,6.5rem);line-height:1.05;">SolarPack</h1>
+	<h1 style="margin:0 0 0.5rem 0;font-size:clamp(3.5rem,8vw,6.5rem);line-height:1.05;color:var(--accent);">SolarPack</h1>
 	<div class="subtitle" style="font-size:1.25rem;margin-bottom:1.2rem;">Solar Vehicle Team at NC State</div>
 	<p style="color:var(--subtxt);max-width:600px;margin:0;">
 	  Striving to break barriers in the sustainable vehicle industry with a hardworking group of over 40 passionate students. Join us in our journey to a more sustainable future for transportation.
