--- a/sponsors.html
+++ b/sponsors.html
@@ -28,7 +28,9 @@
 </head>
 <body>
 	<header class="header">
-		<div class="logo">SC</div>
+		<div class="logo" style="background:none;padding:0;margin-right:1.2rem;box-shadow:none;">
+		  <img src="assets/images/solarpack_logo.png" alt="SolarPack Logo" style="height:44px;width:44px;object-fit:contain;display:block;background:none;border-radius:0;" />
+		</div>
 		<nav class="nav">
 			<a href="index.html">Home</a>
 			<a href="team.html">Team</a>
