Add new feature to process user input
Implemented a function to handle and validate user input in the main application module. This improves input reliability and prepares the codebase for future enhancements.

--- a/alumni.html
+++ b/alumni.html
@@ -45,16 +45,125 @@
 	<main>
 		<h1>Alumni</h1>
 		<div class="alumni-grid">
-			<!-- Example alumni card -->
-			<div class="alumni-card">
-				<img src="alumni-placeholder.png" alt="Alumni Photo" class="alumni-img" />
-				<div class="alumni-name">Jordan Lee</div>
-				<div class="alumni-role">Co-Founder</div>
-				<div class="alumni-socials">
-					<a href="#"><i class="fab fa-linkedin"></i></a>
-				</div>
-			</div>
-			<!-- Add more alumni cards as needed -->
+		</div>
+		<!-- Alumni by Year -->
+		<div style="max-width:900px;margin:2.5rem auto 0;">
+		  <section style="margin-bottom:2.5rem;">
+			<h2 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:2rem;margin-bottom:0.7rem;">Spring 2021</h2>
+			<ul style="color:var(--subtxt);font-size:1.13rem;line-height:1.7;list-style:none;padding:0;">
+				<li><b>Project Director:</b> Alex Kelly</li>
+				<li><b>Technical Director:</b> Ben Nichols</li>
+				<li><b>Structures:</b> Bec Alderson</li>
+				<li><b>Vehicle Dynamics:</b> Matt Blake</li>
+				<li><b>Solar:</b> Matt Panizza</li>
+				<li><b>High Voltage:</b> Harrison Strag</li>
+				<li><b>Business:</b> Emma McLaughlin</li>
+				<li><b>Systems Architecture:</b> Joe Schroedl</li>
+				<li><b>Aerodynamics:</b> Jonathan Rhodes</li>
+			</ul>
+		  </section>
+		  <section style="margin-bottom:2.5rem;">
+			<h2 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:2rem;margin-bottom:0.7rem;">Fall 2020</h2>
+			<ul style="color:var(--subtxt);font-size:1.13rem;line-height:1.7;list-style:none;padding:0;">
+				<li><b>Project Director:</b> Alex Kelly</li>
+				<li><b>Technical Director:</b> Emily Solis</li>
+				<li><b>Structures:</b> Bec Alderson</li>
+				<li><b>Vehicle Dynamics:</b> Jack McDonald</li>
+				<li><b>Electrical:</b> Nilesh Contractor</li>
+				<li><b>Business:</b> Alex Kelly</li>
+				<li><b>Systems Architecture:</b> Colin Brown</li>
+				<li><b>Aerodynamics:</b> Jesse Heidrich</li>
+			</ul>
+		  </section>
+		  <section style="margin-bottom:2.5rem;">
+			<h2 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:2rem;margin-bottom:0.7rem;">Spring 2020</h2>
+			<ul style="color:var(--subtxt);font-size:1.13rem;line-height:1.7;list-style:none;padding:0;">
+				<li><b>Project Director:</b> Adam Lineberger</li>
+				<li><b>Technical Director:</b> Emily Solis</li>
+				<li><b>Structures:</b> Bec Alderson</li>
+				<li><b>Vehicle Dynamics:</b> Alex Kelly</li>
+				<li><b>Electrical:</b> Nilesh Contractor</li>
+				<li><b>Business:</b> Kathie Tran</li>
+				<li><b>Systems Architecture:</b> Colin Brown</li>
+				<li><b>Aerodynamics:</b> Jesse Heidrich</li>
+			</ul>
+		  </section>
+		  <section style="margin-bottom:2.5rem;">
+			<h2 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:2rem;margin-bottom:0.7rem;">Fall 2019</h2>
+			<ul style="color:var(--subtxt);font-size:1.13rem;line-height:1.7;list-style:none;padding:0;">
+				<li><b>Director:</b> Adam Lineberger</li>
+				<li><b>Structures:</b> Emma Bartlett</li>
+				<li><b>Vehicle Dynamics:</b> Emily Solis</li>
+				<li><b>Electrical:</b> Ram Bala</li>
+				<li><b>Business:</b> Marie-Fleur Hombrecher</li>
+				<li><b>Systems Architecture:</b> Seth Hollandsworth</li>
+				<li><b>Aerodynamics:</b> Nate Browning</li>
+			</ul>
+		  </section>
+		  <section style="margin-bottom:2.5rem;">
+			<h2 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:2rem;margin-bottom:0.7rem;">Spring 2019</h2>
+			<ul style="color:var(--subtxt);font-size:1.13rem;line-height:1.7;list-style:none;padding:0;">
+				<li><b>Director:</b> Cody Biedermann</li>
+				<li><b>Structures:</b> Emma Bartlett</li>
+				<li><b>Vehicle Dynamics:</b> Elton Padua</li>
+				<li><b>Electrical:</b> Micah Ulrich</li>
+				<li><b>Business:</b> Marie-Fleur Hombrecher</li>
+				<li><b>Systems Architecture:</b> Ethan Thompson</li>
+				<li><b>Aerodynamics:</b> Will Jordan</li>
+			</ul>
+		  </section>
+		  <section style="margin-bottom:2.5rem;">
+			<h2 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:2rem;margin-bottom:0.7rem;">Fall 2018</h2>
+			<ul style="color:var(--subtxt);font-size:1.13rem;line-height:1.7;list-style:none;padding:0;">
+				<li><b>Director:</b> Cody Biedermann</li>
+				<li><b>Structures:</b> Jess Somerville</li>
+				<li><b>Vehicle Dynamics:</b> Elton Padua</li>
+				<li><b>Electrical:</b> Micah Ulrich</li>
+				<li><b>Business:</b> Sam Brennen-Lisko</li>
+				<li><b>Systems Architecture:</b> Byron Spells</li>
+			</ul>
+		  </section>
+		  <section style="margin-bottom:2.5rem;">
+			<h2 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:2rem;margin-bottom:0.7rem;">Spring 2018</h2>
+			<ul style="color:var(--subtxt);font-size:1.13rem;line-height:1.7;list-style:none;padding:0;">
+				<li><b>Director:</b> Byron Spells</li>
+				<li><b>Structures:</b> Rachel Shalloway</li>
+				<li><b>Vehicle Dynamics:</b> Cody Biedermann</li>
+				<li><b>Electrical:</b> Komal Charania</li>
+				<li><b>Business:</b> Sam Brennen-Lisko</li>
+				<li><b>Design:</b> Jecori Owens-Schuler</li>
+			</ul>
+		  </section>
+		  <section style="margin-bottom:2.5rem;">
+			<h2 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:2rem;margin-bottom:0.7rem;">Fall 2017</h2>
+			<ul style="color:var(--subtxt);font-size:1.13rem;line-height:1.7;list-style:none;padding:0;">
+				<li><b>Director:</b> Byron Spells</li>
+				<li><b>Structures:</b> Grant Hierman</li>
+				<li><b>Vehicle Dynamics:</b> Cody Biedermann</li>
+				<li><b>Electrical:</b> Thomas Dotson</li>
+				<li><b>Business:</b> Hannah Schauer</li>
+				<li><b>Design:</b> Jecori Owens-Schuler</li>
+				<li><b>Aerodynamics:</b> AB Gundala</li>
+			</ul>
+		  </section>
+		  <section style="margin-bottom:2.5rem;">
+			<h2 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:2rem;margin-bottom:0.7rem;">Spring 2017</h2>
+			<ul style="color:var(--subtxt);font-size:1.13rem;line-height:1.7;list-style:none;padding:0;">
+				<li><b>Director:</b> Byron Spells</li>
+				<li><b>Structures:</b> Arsh Grewal</li>
+				<li><b>Vehicle Dynamics:</b> Melissa Hyland</li>
+				<li><b>Electrical:</b> Thomas Dotson</li>
+			</ul>
+		  </section>
+		  <section style="margin-bottom:2.5rem;">
+			<h2 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:2rem;margin-bottom:0.7rem;">2016</h2>
+			<ul style="color:var(--subtxt);font-size:1.13rem;line-height:1.7;list-style:none;padding:0;">
+				<li><b>Director:</b> Byron Spells</li>
+				<li><b>Structures:</b> Arsh Grewal</li>
+				<li><b>Vehicle Dynamics:</b> Aciel Binhza</li>
+			</ul>
+		  </section>
+		</div>
 		</div>
 	</main>
 	<footer class="footer">&copy; 2025 Solar Car Club. All rights reserved.</footer>
