--- a/blog.html
+++ b/blog.html
@@ -40,20 +40,37 @@
 			<a href="contact.html">Contact</a>
 		</nav>
 	</header>
-	<main>
-		<h1>Club Blog</h1>
-		<div class="blog-list">
-			<!-- Example blog post -->
-			<div class="blog-post">
-				<div class="blog-title">Welcome to Our New Website!</div>
-				<div class="blog-meta">Posted July 8, 2025 by Admin</div>
-				<div class="blog-content">
-					<p>Stay tuned for updates on our solar car build, race results, and club news. We'll be sharing our journey and progress here!</p>
-				</div>
-			</div>
-			<!-- Add more blog posts as needed -->
-		</div>
-	</main>
+<main>
+	<h1>Club Blog</h1>
+	<div class="blog-list" id="blog-list">
+	  <!-- Blog previews will be injected here by JS -->
+	</div>
+</main>
 	<footer class="footer">&copy; 2025 Solar Car Club. All rights reserved.</footer>
+<script>
+// Fetch blog index and render list
+fetch('blogs/index.json')
+  .then(res => res.json())
+  .then(posts => {
+	// Sort by date (oldest to newest)
+	posts.sort((a, b) => new Date(a.date) - new Date(b.date));
+	const list = document.getElementById('blog-list');
+	list.innerHTML = posts.map(post => `
+	  <a href="blogs/${post.filename}" style="text-decoration:none;color:inherit;">
+		<div class="blog-preview" style="display:flex;align-items:center;gap:1.5rem;cursor:pointer;background:var(--card);border-radius:var(--radius);box-shadow:0 1px 6px #0003;padding:1.2rem 1.2rem 1.2rem 0;margin-bottom:2rem;transition:box-shadow 0.15s;">
+		  <img src="blogs/${post.image}" alt="${post.title}" style="width:90px;height:90px;object-fit:cover;border-radius:8px;margin-left:1.2rem;background:#222;flex-shrink:0;">
+		  <div style="flex:1;">
+			<div style="display:flex;align-items:center;justify-content:space-between;">
+			  <div class="blog-title" style="margin-bottom:0;">${post.title}</div>
+			  <span style="color:var(--subtxt);font-size:0.98rem;">${post.readTime}</span>
+			</div>
+			<div class="blog-meta">${post.date} &middot; by ${post.author}${post.updated ? ` &middot; Updated: ${post.updated}` : ''}</div>
+			<div style="color:var(--subtxt);font-size:1.08rem;">${post.preview}</div>
+		  </div>
+		</div>
+	  </a>
+	`).join('');
+  });
+</script>
 </body>
 </html>
