--- a/donate.html
+++ b/donate.html
@@ -42,7 +42,11 @@
 		<h1>Support Our Mission</h1>
 		<div class="donate-section">
 			<p>Your donation helps us build, innovate, and compete in solar car challenges. Every contribution makes a difference!</p>
-			<!-- Replace the link below with your real donation/payment link -->
+			<ul style="text-align:left;max-width:420px;margin:1.5rem auto 1.5rem auto;color:var(--subtxt);font-size:1.08rem;line-height:1.7;">
+				<li><b>Aeroshell Construction:</b> The largest portion of your donation will go directly toward building our new carbon fiber aeroshell, which is essential for our car's performance and efficiency.</li>
+				<li><b>Regulatory Components:</b> We need to purchase fasteners, wires, and other small accessories to meet strict race regulations—including the battery box, ballast boxes, and other required safety features.</li>
+				<li><b>2026 Race Preparation:</b> Your support helps us meet all technical and safety requirements so we can compete in the 2026 solar car race and represent NC State on a national stage.</li>
+			</ul>
 			<a href="#" class="donate-btn"><i class="fas fa-heart"></i> Donate Now</a>
 		</div>
 	</main>
