--- a/blogs/blog6.html
+++ b/blogs/blog6.html
@@ -25,6 +25,10 @@
     <div class="blog-content">
       <p><strong>By Aaron Yang</strong></p>
       <p>Watch as the Vehicle Dynamics team speaks on their progress and experiences working on Fenrir, our solar-powered car for the 2025 Formula Sun Grand Prix!</p>
+      <video controls style="width:100%;max-width:500px;display:block;margin:2rem auto 2.5rem;border-radius:8px;background:#000;">
+        <source src="../assets/blogs/blog6.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
       <p><em>Alex Lord, Jake Ramage, Aaron Wold</em></p>
     </div>
   </div>
