Remove Sponsors link from navigation and update content
Removed the 'Sponsors' link from the navigation menus across all pages. Updated the business lead's description in team.html to refer to 'supporters' instead of 'sponsors'. Also improved the alumni page layout and changed blog post sorting to newest-first in blog.html. Removed unused images from blog posts for a cleaner appearance.

--- a/team.html
+++ b/team.html
@@ -35,7 +35,7 @@
 		<nav class="nav">
 			<a href="index.html">Home</a>
 			<a href="team.html" class="active">Team</a>
-			<a href="sponsors.html">Sponsors</a>
+
 			<a href="alumni.html">Alumni</a>
 			<a href="donate.html">Donate</a>
 			<a href="blog.html">Blog</a>
@@ -92,7 +92,7 @@
 				<img src="assets/images/image_edited_edited.jpg" alt="Gerbrand Poster" class="member-img" />
 				<div class="member-name">Gerbrand Poster</div>
 				<div class="member-role">Business Lead</div>
-				<p style="color:var(--subtxt);font-size:0.98rem;margin-bottom:0.7rem;">As the business team lead, I oversee sponsorship, finance, social media, and outreach events for SolarPack. I am a fourth-year majoring in English who joined SolarPack in my first year after talking to Chris Ford at the Winter involvement fair. I love working with engineers--they are very sensible and have a different perspective than the humanities students I am used to. There are few things cooler or more environmentally beneficial than solar cars, and I revel in building excitement for them in potential sponsors. Outside of SolarPack I enjoy good books, fine cuisine, and indolence.</p>
+				<p style="color:var(--subtxt);font-size:0.98rem;margin-bottom:0.7rem;">As the business team lead, I oversee sponsorship, finance, social media, and outreach events for SolarPack. I am a fourth-year majoring in English who joined SolarPack in my first year after talking to Chris Ford at the Winter involvement fair. I love working with engineers--they are very sensible and have a different perspective than the humanities students I am used to. There are few things cooler or more environmentally beneficial than solar cars, and I revel in building excitement for them in potential supporters. Outside of SolarPack I enjoy good books, fine cuisine, and indolence.</p>
 			</div>
 		</div>
 	</main>
