--- a/alumni.html
+++ b/alumni.html
@@ -35,7 +35,7 @@
 		<nav class="nav">
 			<a href="index.html">Home</a>
 			<a href="team.html">Team</a>
-			<a href="sponsors.html">Sponsors</a>
+
 			<a href="alumni.html" class="active">Alumni</a>
 			<a href="donate.html">Donate</a>
 			<a href="blog.html">Blog</a>
@@ -47,7 +47,10 @@
 		<div class="alumni-grid">
 		</div>
 		<!-- Alumni by Year -->
-		<div style="max-width:900px;margin:2.5rem auto 0;">
+	<div style="max-width:900px;margin:2.5rem auto 0;">
+	  <div style="display: flex; flex-wrap: wrap; gap: 2.5rem;">
+		<div style="flex:1 1 350px;min-width:320px;">
+		  <!-- Column 1 -->
 		  <section style="margin-bottom:2.5rem;">
 			<h2 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:2rem;margin-bottom:0.7rem;">Spring 2021</h2>
 			<ul style="color:var(--subtxt);font-size:1.13rem;line-height:1.7;list-style:none;padding:0;">
@@ -112,6 +115,9 @@
 				<li><b>Aerodynamics:</b> Will Jordan</li>
 			</ul>
 		  </section>
+		</div>
+		<div style="flex:1 1 350px;min-width:320px;">
+		  <!-- Column 2 -->
 		  <section style="margin-bottom:2.5rem;">
 			<h2 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:2rem;margin-bottom:0.7rem;">Fall 2018</h2>
 			<ul style="color:var(--subtxt);font-size:1.13rem;line-height:1.7;list-style:none;padding:0;">
@@ -164,6 +170,8 @@
 			</ul>
 		  </section>
 		</div>
+	  </div>
+	</div>
 		</div>
 	</main>
 	<footer class="footer">&copy; 2025 Solar Car Club. All rights reserved.</footer>
