--- a/blog.html
+++ b/blog.html
@@ -30,15 +30,14 @@
 		<div class="logo" style="background:none;padding:0;margin-right:1.2rem;box-shadow:none;">
 		  <img src="assets/images/solarpack_logo.png" alt="SolarPack Logo" style="height:44px;width:44px;object-fit:contain;display:block;background:none;border-radius:0;" />
 		</div>
-		<nav class="nav">
-			<a href="index.html">Home</a>
-			<a href="team.html">Team</a>
-			<a href="sponsors.html">Sponsors</a>
-			<a href="alumni.html">Alumni</a>
-			<a href="donate.html">Donate</a>
-			<a href="blog.html" class="active">Blog</a>
-			<a href="contact.html">Contact</a>
-		</nav>
+<nav class="nav">
+	<a href="index.html">Home</a>
+	<a href="team.html">Team</a>
+	<a href="alumni.html">Alumni</a>
+	<a href="donate.html">Donate</a>
+	<a href="blog.html" class="active">Blog</a>
+	<a href="contact.html">Contact</a>
+</nav>
 	</header>
 <main>
 	<h1>Club Blog</h1>
@@ -52,8 +51,8 @@
 fetch('blogs/index.json')
   .then(res => res.json())
   .then(posts => {
-	// Sort by date (oldest to newest)
-	posts.sort((a, b) => new Date(a.date) - new Date(b.date));
+  // Sort by date (newest to oldest)
+  posts.sort((a, b) => new Date(b.date) - new Date(a.date));
 	const list = document.getElementById('blog-list');
 	list.innerHTML = posts.map(post => {
 	  const hasImage = post.image && post.image.trim() !== '';
