Add SolarPack App page and update navigation
Introduced a new app.html page featuring information about the SolarPack mobile app, including a screenshot carousel and App Store link. Added related images for the app and updated the navigation in index.html to include the new App page. Improved alumni.html layout and reorganized alumni year sections for better readability.

--- a/alumni.html
+++ b/alumni.html
@@ -48,9 +48,8 @@
 		</div>
 		<!-- Alumni by Year -->
 	<div style="max-width:900px;margin:2.5rem auto 0;">
-	  <div style="display: flex; flex-wrap: wrap; gap: 2.5rem;">
-		<div style="flex:1 1 350px;min-width:320px;">
-		  <!-- Column 1 -->
+	  <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 2.5rem;">
+		<div>
 		  <section style="margin-bottom:2.5rem;">
 			<h2 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:2rem;margin-bottom:0.7rem;">Spring 2021</h2>
 			<ul style="color:var(--subtxt);font-size:1.13rem;line-height:1.7;list-style:none;padding:0;">
@@ -65,6 +64,40 @@
 				<li><b>Aerodynamics:</b> Jonathan Rhodes</li>
 			</ul>
 		  </section>
+		  <section style="margin-bottom:2.5rem;">
+			<h2 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:2rem;margin-bottom:0.7rem;">Fall 2019</h2>
+			<ul style="color:var(--subtxt);font-size:1.13rem;line-height:1.7;list-style:none;padding:0;">
+				<li><b>Director:</b> Adam Lineberger</li>
+				<li><b>Structures:</b> Emma Bartlett</li>
+				<li><b>Vehicle Dynamics:</b> Emily Solis</li>
+				<li><b>Electrical:</b> Ram Bala</li>
+				<li><b>Business:</b> Marie-Fleur Hombrecher</li>
+				<li><b>Systems Architecture:</b> Seth Hollandsworth</li>
+				<li><b>Aerodynamics:</b> Nate Browning</li>
+			</ul>
+		  </section>
+		  <section style="margin-bottom:2.5rem;">
+			<h2 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:2rem;margin-bottom:0.7rem;">Spring 2018</h2>
+			<ul style="color:var(--subtxt);font-size:1.13rem;line-height:1.7;list-style:none;padding:0;">
+				<li><b>Director:</b> Byron Spells</li>
+				<li><b>Structures:</b> Rachel Shalloway</li>
+				<li><b>Vehicle Dynamics:</b> Cody Biedermann</li>
+				<li><b>Electrical:</b> Komal Charania</li>
+				<li><b>Business:</b> Sam Brennen-Lisko</li>
+				<li><b>Design:</b> Jecori Owens-Schuler</li>
+			</ul>
+		  </section>
+		  <section style="margin-bottom:2.5rem;">
+			<h2 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:2rem;margin-bottom:0.7rem;">Spring 2017</h2>
+			<ul style="color:var(--subtxt);font-size:1.13rem;line-height:1.7;list-style:none;padding:0;">
+				<li><b>Director:</b> Byron Spells</li>
+				<li><b>Structures:</b> Arsh Grewal</li>
+				<li><b>Vehicle Dynamics:</b> Melissa Hyland</li>
+				<li><b>Electrical:</b> Thomas Dotson</li>
+			</ul>
+		  </section>
+		</div>
+		<div>
 		  <section style="margin-bottom:2.5rem;">
 			<h2 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:2rem;margin-bottom:0.7rem;">Fall 2020</h2>
 			<ul style="color:var(--subtxt);font-size:1.13rem;line-height:1.7;list-style:none;padding:0;">
@@ -92,33 +125,6 @@
 			</ul>
 		  </section>
 		  <section style="margin-bottom:2.5rem;">
-			<h2 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:2rem;margin-bottom:0.7rem;">Fall 2019</h2>
-			<ul style="color:var(--subtxt);font-size:1.13rem;line-height:1.7;list-style:none;padding:0;">
-				<li><b>Director:</b> Adam Lineberger</li>
-				<li><b>Structures:</b> Emma Bartlett</li>
-				<li><b>Vehicle Dynamics:</b> Emily Solis</li>
-				<li><b>Electrical:</b> Ram Bala</li>
-				<li><b>Business:</b> Marie-Fleur Hombrecher</li>
-				<li><b>Systems Architecture:</b> Seth Hollandsworth</li>
-				<li><b>Aerodynamics:</b> Nate Browning</li>
-			</ul>
-		  </section>
-		  <section style="margin-bottom:2.5rem;">
-			<h2 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:2rem;margin-bottom:0.7rem;">Spring 2019</h2>
-			<ul style="color:var(--subtxt);font-size:1.13rem;line-height:1.7;list-style:none;padding:0;">
-				<li><b>Director:</b> Cody Biedermann</li>
-				<li><b>Structures:</b> Emma Bartlett</li>
-				<li><b>Vehicle Dynamics:</b> Elton Padua</li>
-				<li><b>Electrical:</b> Micah Ulrich</li>
-				<li><b>Business:</b> Marie-Fleur Hombrecher</li>
-				<li><b>Systems Architecture:</b> Ethan Thompson</li>
-				<li><b>Aerodynamics:</b> Will Jordan</li>
-			</ul>
-		  </section>
-		</div>
-		<div style="flex:1 1 350px;min-width:320px;">
-		  <!-- Column 2 -->
-		  <section style="margin-bottom:2.5rem;">
 			<h2 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:2rem;margin-bottom:0.7rem;">Fall 2018</h2>
 			<ul style="color:var(--subtxt);font-size:1.13rem;line-height:1.7;list-style:none;padding:0;">
 				<li><b>Director:</b> Cody Biedermann</li>
@@ -127,17 +133,6 @@
 				<li><b>Electrical:</b> Micah Ulrich</li>
 				<li><b>Business:</b> Sam Brennen-Lisko</li>
 				<li><b>Systems Architecture:</b> Byron Spells</li>
-			</ul>
-		  </section>
-		  <section style="margin-bottom:2.5rem;">
-			<h2 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:2rem;margin-bottom:0.7rem;">Spring 2018</h2>
-			<ul style="color:var(--subtxt);font-size:1.13rem;line-height:1.7;list-style:none;padding:0;">
-				<li><b>Director:</b> Byron Spells</li>
-				<li><b>Structures:</b> Rachel Shalloway</li>
-				<li><b>Vehicle Dynamics:</b> Cody Biedermann</li>
-				<li><b>Electrical:</b> Komal Charania</li>
-				<li><b>Business:</b> Sam Brennen-Lisko</li>
-				<li><b>Design:</b> Jecori Owens-Schuler</li>
 			</ul>
 		  </section>
 		  <section style="margin-bottom:2.5rem;">
@@ -150,15 +145,6 @@
 				<li><b>Business:</b> Hannah Schauer</li>
 				<li><b>Design:</b> Jecori Owens-Schuler</li>
 				<li><b>Aerodynamics:</b> AB Gundala</li>
-			</ul>
-		  </section>
-		  <section style="margin-bottom:2.5rem;">
-			<h2 style="color:var(--accent);font-family:'Bebas Neue',sans-serif;font-size:2rem;margin-bottom:0.7rem;">Spring 2017</h2>
-			<ul style="color:var(--subtxt);font-size:1.13rem;line-height:1.7;list-style:none;padding:0;">
-				<li><b>Director:</b> Byron Spells</li>
-				<li><b>Structures:</b> Arsh Grewal</li>
-				<li><b>Vehicle Dynamics:</b> Melissa Hyland</li>
-				<li><b>Electrical:</b> Thomas Dotson</li>
 			</ul>
 		  </section>
 		  <section style="margin-bottom:2.5rem;">
