--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
 </div>
 		<nav class="nav">
 			<a href="index.html" class="active">Home</a>
+			<a href="app.html">App</a>
 			<a href="team.html">Team</a>
-
 			<a href="alumni.html">Alumni</a>
 			<a href="donate.html">Donate</a>
 			<a href="blog.html">Blog</a>
