--- a/app.html
+++ b/app.html
@@ -94,24 +94,18 @@
 		<section class="section" style="text-align:center;">
 			<h1 style="font-family:'Bebas Neue',sans-serif;font-size:3rem;color:var(--accent);margin-bottom:1.2rem;">SolarPack App</h1>
 			<p style="color:var(--subtxt);font-size:1.2rem;max-width:600px;margin:0 auto 2.2rem;">Welcome to the SolarPack App page! Here you'll find information about our mobile and web applications, features, and how to get involved as a user or developer.</p>
-			<ul style="color:var(--txt);font-size:1.1rem;max-width:600px;margin:1.5rem auto 2.5rem;line-height:1.7;">
-				<li>Track the latest vehicle data and team progress</li>
-				<li>Access exclusive app features for team members</li>
-				<li>Learn how to contribute to our open-source projects</li>
-				<li>Stay up to date with app releases and updates</li>
-			</ul>
 			<a href="https://apps.apple.com/us/app/your-app-id" target="_blank" style="display:inline-block;margin-bottom:2.5rem;">
 				<img src="assets/images/app_store.png" alt="Download on the App Store" style="height:60px;width:auto;box-shadow:none;background:none;" />
 			</a>
 
 			<!-- App Screenshots Grid -->
-			<div style="display:flex;justify-content:center;margin-top:2.5rem;">
-				<div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(160px,1fr));gap:1.5rem;max-width:700px;width:100%;">
-					<img src="assets/images/iphone-app/Iphone1.png" alt="App Screenshot 1" style="width:100%;max-width:180px;border-radius:var(--radius);box-shadow:0 2px 16px #0005;background:#222;" />
-					<img src="assets/images/iphone-app/Iphone2.png" alt="App Screenshot 2" style="width:100%;max-width:180px;border-radius:var(--radius);box-shadow:0 2px 16px #0005;background:#222;" />
-					<img src="assets/images/iphone-app/Iphone3.png" alt="App Screenshot 3" style="width:100%;max-width:180px;border-radius:var(--radius);box-shadow:0 2px 16px #0005;background:#222;" />
-					<img src="assets/images/iphone-app/Iphone4.png" alt="App Screenshot 4" style="width:100%;max-width:180px;border-radius:var(--radius);box-shadow:0 2px 16px #0005;background:#222;" />
-					<img src="assets/images/iphone-app/Iphone5.png" alt="App Screenshot 5" style="width:100%;max-width:180px;border-radius:var(--radius);box-shadow:0 2px 16px #0005;background:#222;" />
+			<div style="width:100%;display:flex;justify-content:center;margin-top:2.5rem;">
+				<div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(160px,1fr));gap:1.5rem;max-width:700px;width:100%;justify-content:center;">
+					<img src="assets/images/iphone-app/Iphone1.png" alt="App Screenshot 1" style="width:100%;max-width:180px;border-radius:var(--radius);box-shadow:0 2px 16px #0005;background:#222;justify-self:center;" />
+					<img src="assets/images/iphone-app/Iphone2.png" alt="App Screenshot 2" style="width:100%;max-width:180px;border-radius:var(--radius);box-shadow:0 2px 16px #0005;background:#222;justify-self:center;" />
+					<img src="assets/images/iphone-app/Iphone3.png" alt="App Screenshot 3" style="width:100%;max-width:180px;border-radius:var(--radius);box-shadow:0 2px 16px #0005;background:#222;justify-self:center;" />
+					<img src="assets/images/iphone-app/Iphone4.png" alt="App Screenshot 4" style="width:100%;max-width:180px;border-radius:var(--radius);box-shadow:0 2px 16px #0005;background:#222;justify-self:center;" />
+					<img src="assets/images/iphone-app/Iphone5.png" alt="App Screenshot 5" style="width:100%;max-width:180px;border-radius:var(--radius);box-shadow:0 2px 16px #0005;background:#222;justify-self:center;" />
 				</div>
 			</div>
 			<!-- End App Screenshots Grid -->
